[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Menufuente.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/game_over.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Musica y Sonidos/Menu sound.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BotonV" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -144.0
margin_right = 86.0
margin_bottom = 166.0
custom_constants/separation = 10
alignment = 1

[node name="Jugar2" type="Button" parent="BotonV"]
margin_top = 36.0
margin_right = 170.0
margin_bottom = 111.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.298039, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Play"
flat = true

[node name="Opciones" type="Button" parent="BotonV"]
margin_top = 121.0
margin_right = 170.0
margin_bottom = 162.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Opciones"
flat = true

[node name="Salir2" type="Button" parent="BotonV"]
margin_top = 172.0
margin_right = 170.0
margin_bottom = 274.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.584314, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Salir"
flat = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="BotonV/Jugar2" to="." method="_on_Jugar2_pressed"]
[connection signal="pressed" from="BotonV/Salir2" to="." method="_on_Salir2_pressed"]
